# FpsAimAssistant

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: build.yml  cleanup-releases.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: PLACE_MODEL_HERE.txt  dawan_v11s_256.json  yolov8n_coco80.json
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
app/src/main/cpp/aimbot/: aimbot_controller.cpp  aimbot_controller.h  target_tracker.cpp  target_tracker.h
app/src/main/cpp/input/: touch_injector.cpp  touch_injector.h
app/src/main/cpp/ncnn/: yolo_v8.cpp  yolo_v8.h
app/src/main/java/com/aimassistant/: AimService.kt  MainActivity.kt  NativeBridge.kt
app/src/main/java/com/aimassistant/capture/: FrameCapture.kt  ScreenCapture.kt  SurfaceControlCapture.kt
app/src/main/java/com/aimassistant/overlay/: OverlayManager.kt
app/src/main/java/com/aimassistant/trigger/: FireDetector.kt
app/src/main/java/com/aimassistant/util/: DriverProbe.kt  ModelManager.kt  RootUtil.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
kernel/: Makefile  touch_driver.c
